Added API to get payload, read it efficiently and count distinct words

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -81,7 +81,7 @@ jhipster:
       report-frequency: 60 # in seconds
   cache:
     redis:
-      server: ${redis.test.server}
+      server: redis://localhost:6379
 # ===================================================================
 # Application specific properties
 # Add your own application properties here, see the ApplicationProperties class
