cleanup and fixup

--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,11 @@
             <artifactId>okhttp</artifactId>
             <version>3.14.7</version>
         </dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.6</version>
+        </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
     </dependencies>
 
